--- a/creativity.html
+++ b/creativity.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 
-  <link rel="stylesheet" type="text/css" href="./creativity.css">
+  <link rel="stylesheet" type="text/css" href="./css/creativity.css">
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
 <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
@@ -11,7 +11,7 @@
 <body>
 
 <video autoplay muted loop id="myVideo">
-  <source src="video.mp4" type="video/mp4">
+  <source src="./images/video.mp4" type="video/mp4">
   Your browser does not support HTML5 video.
 </video>
 
@@ -46,9 +46,28 @@
   </div>
 
 </div>
+<!--
+<!-- Modal content
+      <div class="modal-content">
+        <div class="modal-header">
+          <button type="button" class="close" data-dismiss="modal">&times;</button>
+          <h4 class="modal-title">Modal Header</h4>
+        </div>
+        <div class="modal-body">
+          <p>Some text in the modal.</p>
 
-<script src="./creativity.js"></script>
+        </div>
+        <div class="modal-footer">
+          <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+        </div>
+      </div>
+
+    </div>
+  </div>
+
+</div> -->
+
+<script src="./js/creativity.js"></script>
 
 </body>
 </html>
-
