--- a/creativity.html
+++ b/creativity.html
@@ -16,29 +16,30 @@
 </video>
 
 
+
 <div class="bs-example">
     <!-- Button HTML (to Trigger Modal) -->
-    <a href="#myModal" class="btn btn-lg btn-primary" data-toggle="modal">Get Inspired</a>
+    <a href="#myModal1" class="btn btn-lg btn-primary" data-toggle="modal">Get Inspired</a>
 
 
 
 <!-- Modal -->
 
- <!-- Modal -->
-  <div class="modal fade" id="myModal" role="dialog">
+ <!-- Modal1 -->
+  <div class="modal fade" id="myModal1" role="dialog">
     <div class="modal-dialog">
 
       <!-- Modal content-->
       <div class="modal-content">
         <div class="modal-header">
           <button type="button" class="close" data-dismiss="modal">&times;</button>
-          <h4 class="modal-title">Modal Header</h4>
+          <h4 class="modal-title"></h4>
         </div>
         <div class="modal-body">
-          <iframe id="cartoonVideo" width="560" height="315" src="//www.youtube.com/embed/YE7VzlLtp-4" frameborder="0" allowfullscreen></iframe>
-        </div>
+
+         </div>
         <div class="modal-footer">
-          <button type="button" class="btn btn-info btn-lg" data-toggle="modal" data-target="#myModal">Get Inspired</button>
+         <a id="mylink" target="_blank" href=> <button type="button" class="btn btn-info btn-lg" data-toggle="modal" data-target="#myModal">Get your ticket</button></a>
         </div>
       </div>
 
@@ -46,26 +47,12 @@
   </div>
 
 </div>
-<!--
-<!-- Modal content
-      <div class="modal-content">
-        <div class="modal-header">
-          <button type="button" class="close" data-dismiss="modal">&times;</button>
-          <h4 class="modal-title">Modal Header</h4>
-        </div>
-        <div class="modal-body">
-          <p>Some text in the modal.</p>
 
-        </div>
-        <div class="modal-footer">
-          <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
-        </div>
-      </div>
 
-    </div>
-  </div>
-
-</div> -->
+<script
+  src="https://code.jquery.com/jquery-3.2.1.js"
+  integrity="sha256-DZAnKJ/6XZ9si04Hgrsxu/8s717jcIzLy3oi35EouyE="
+  crossorigin="anonymous"></script>
 
 <script src="./js/creativity.js"></script>
 
